Fix table overflow

--- a/packets/seeds-docs/src/layouts/scss/_page.scss
+++ b/packets/seeds-docs/src/layouts/scss/_page.scss
@@ -1,5 +1,7 @@
 main {
   padding: $Space-size--400;
+  max-width: 60rem;
+
   li,
   p {
     max-width: 42em;
